--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									時銀科技等於您公司的設計與資訊部門，讓您不用煩惱組成團隊，直接幫您完成所需，降低內部人員負荷。
 								</p>
 								<ul class="actions">
-									<li><a href="mailto:abel.chang@broccoli.ai" class="button icon solid fa-download">聯絡我們</a></li>
+									<li><a href="mailto:ccabel42@gmail.com" class="button icon solid fa-download">聯絡我們</a></li>
 								</ul>
 							</article>
 
